# io4doc

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
benchmarks/cpp/: CMakeLists.txt  Document_benchmark.h  Sentence_benchmark.h  benchmarking.cpp
demos/: zh_fast_keywords_extraction.py  zh_fast_keywords_extraction_v0.py
examples/: CoreNLPProcessor_example.py  SpaCyProcessor_example.py  rule_base_keywords_extraction.py
extensions/cpp/: CMakeLists.txt  Document.h  Sentence.h  Token.h  keywords.h  pymodule.cpp  utils.h
keytext4py/: CoreNLPProcessor.py  SpaCyProcessor.py  TextProcessor.py  __init__.py  corenlp_helper.py  stanza_helper.py  utils.py
